Adding the employee data

--- a/EmployeePayrollWebForms/EmployeePayrollWebForms.csproj
+++ b/EmployeePayrollWebForms/EmployeePayrollWebForms.csproj
@@ -123,6 +123,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Employee.aspx" />
+    <Content Include="employeePayroll.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -216,6 +217,13 @@
     </Compile>
     <Compile Include="Employee.aspx.designer.cs">
       <DependentUpon>Employee.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="employeePayroll.aspx.cs">
+      <DependentUpon>employeePayroll.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="employeePayroll.aspx.designer.cs">
+      <DependentUpon>employeePayroll.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
