--- a/EmployeePayrollWebForms/EmployeePayrollWebForms.csproj
+++ b/EmployeePayrollWebForms/EmployeePayrollWebForms.csproj
@@ -123,6 +123,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Employee.aspx" />
+    <Content Include="EmployeeList.aspx" />
     <Content Include="employeePayroll.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -204,6 +205,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CustomException.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -217,6 +219,13 @@
     </Compile>
     <Compile Include="Employee.aspx.designer.cs">
       <DependentUpon>Employee.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeList.aspx.cs">
+      <DependentUpon>EmployeeList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EmployeeList.aspx.designer.cs">
+      <DependentUpon>EmployeeList.aspx</DependentUpon>
     </Compile>
     <Compile Include="employeePayroll.aspx.cs">
       <DependentUpon>employeePayroll.aspx</DependentUpon>
